fix content shift issues with surf spot preview actions

--- a/app/components/Drawer/Drawer.scss
+++ b/app/components/Drawer/Drawer.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 20;
+  z-index: 30;
 }
 
 .drawer {
@@ -15,7 +15,7 @@
   max-width: 420px;
   height: 100%;
   background: $white;
-  z-index: 30;
+  z-index: 50;
   transform: translateX(-100%); /* Initially off-screen */
   transition:
     transform 0.3s cubic-bezier(0.4, 0, 0.2, 1),
