--- a/app/components/SurfSpotPreview/SurfSpotPreview.scss
+++ b/app/components/SurfSpotPreview/SurfSpotPreview.scss
@@ -5,6 +5,8 @@
   font-size: $font-size-small;
   line-height: 1.5;
   padding-bottom: $spacing-x-large;
+  width: 100%;
+  box-sizing: border-box;
 
   .preview-section {
     padding-bottom: $spacing-unit;
@@ -53,9 +55,11 @@
     padding-top: $spacing-unit;
     padding-bottom: $spacing-large;
     border-top: 1px solid $outline-color;
+    width: 100%; // Full width to prevent container resize
+    box-sizing: border-box;
 
     .actions {
-      gap: $spacing-small;
+      width: 100%;
     }
   }
 }
