--- a/app/components/Toolbar/Toolbar.scss
+++ b/app/components/Toolbar/Toolbar.scss
@@ -13,7 +13,7 @@
   @media (max-width: 420px) {
     display: block;
     position: fixed;
-    bottom: 144px;
+    bottom: calc(140px + $spacing-unit); // Above TripPlannerButton with spacing
     right: $spacing-unit;
     z-index: 10;
 
